--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "webpack": "3.5.1",
     "webpack-dev-server": "3.0.0",
     "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "react-beautiful-dnd": "10.1.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
