--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.3.1",
     "react-google-maps": "^7.3.0",
     "react-map-gl": "^3.0.4",
+    "react-native-rss-parser": "^1.4.0",
     "react-notification-system": "^0.2.15",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -59,6 +60,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
+    "rss-parser": "^3.7.3",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "sweetalert": "1.0.0",
