--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "moment": "^2.18.1",
+    "mongodb": "^3.3.4",
+    "moongoose": "0.0.5",
     "object-assign": "4.1.1",
     "pe7-icon": "^1.0.4",
     "postcss-flexbugs-fixes": "3.2.0",
