--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "1.1.3",
     "chartist": "0.9.4",
     "classnames": "^2.2.5",
@@ -19,18 +19,18 @@
     "dotenv": "^4.0.0",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.0",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "2.1.0",
     "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "faker": "^4.1.0",
     "file-loader": "0.11.2",
     "fixed-data-table": "^0.6.4",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "3.2.0",
     "jest": "20.0.4",
     "moment": "^2.18.1",
     "mongodb": "^3.3.4",
@@ -64,19 +64,19 @@
     "resolve-url-loader": "^2.1.0",
     "rss-parser": "^3.7.3",
     "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
+    "sw-precache-webpack-plugin": "0.11.5",
     "sweetalert": "1.0.0",
     "sweetalert-react": "^0.4.10",
     "url-loader": "0.5.9",
-    "webpack": "3.5.1",
+    "webpack": "3.12.0",
     "webpack-dev-server": "3.0.0",
-    "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "webpack-manifest-plugin": "^1.2.1"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src node scripts/start.js",
