--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "classnames": "^2.2.5",
     "css-loader": "0.28.4",
     "dotenv": "^4.0.0",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-loader": "2.1.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
+    "eslint": "6.6.0",
+    "eslint-config-react-app": "5.0.2",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-flowtype": "4.4.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "extract-text-webpack-plugin": "3.0.2",
     "faker": "^4.1.0",
     "file-loader": "0.11.2",
@@ -64,6 +65,7 @@
     "resolve-url-loader": "^2.1.0",
     "rss-parser": "^3.7.3",
     "style-loader": "0.18.2",
+    "stylish": "^1.0.0",
     "sw-precache-webpack-plugin": "0.11.5",
     "sweetalert": "1.0.0",
     "sweetalert-react": "^0.4.10",
