--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "extract-text-webpack-plugin": "3.0.2",
     "faker": "^4.1.0",
-    "file-loader": "0.11.2",
     "fixed-data-table": "^0.6.4",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
+    "hooks": "^0.3.2",
     "html-webpack-plugin": "3.2.0",
     "jest": "20.0.4",
     "moment": "^2.18.1",
@@ -43,7 +43,7 @@
     "promise": "8.0.1",
     "react": "^16.3.1",
     "react-addons-shallow-compare": "^15.6.0",
-    "react-beautiful-dnd": "10.1.1",
+    "react-beautiful-dnd": "12.1.1",
     "react-big-calendar": "^0.15.0",
     "react-bootstrap": "^0.31.2",
     "react-bootstrap-sweetalert": "^4.0.0",
@@ -69,6 +69,7 @@
     "sw-precache-webpack-plugin": "0.11.5",
     "sweetalert": "1.0.0",
     "sweetalert-react": "^0.4.10",
+    "tapable": "^1.1.3",
     "url-loader": "0.5.9",
     "webpack": "3.12.0",
     "webpack-dev-server": "3.0.0",
@@ -76,7 +77,8 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "node-sass": "^4.5.3",
+    "file-loader": "^4.2.0",
+    "node-sass": "^4.13.0",
     "sass-loader": "^6.0.6",
     "webpack-manifest-plugin": "^1.2.1"
   },
