--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "acorn": "^7.1.0",
     "animate.css": "^3.5.2",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
@@ -44,7 +45,7 @@
     "react": "^16.3.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-beautiful-dnd": "12.1.1",
-    "react-big-calendar": "^0.15.0",
+    "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^0.31.2",
     "react-bootstrap-sweetalert": "^4.0.0",
     "react-bootstrap-table": "^4.1.0",
@@ -56,6 +57,7 @@
     "react-map-gl": "^3.0.4",
     "react-native-rss-parser": "^1.4.0",
     "react-notification-system": "^0.2.15",
+    "react-prop-types-element-of-type": "^2.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -76,6 +78,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "cross-env": "^5.2.0",
     "file-loader": "^4.2.0",
     "node-sass": "^4.13.0",
