--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.7.2",
     "acorn": "^7.1.0",
     "animate.css": "^3.5.2",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.2",
+    "babel-loader": "8.0.0-beta.1",
+    "babel-preset-react-app": "^9.0.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "1.1.3",
@@ -32,7 +33,7 @@
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
     "hooks": "^0.3.2",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.11",
     "jest": "20.0.4",
     "moment": "^2.18.1",
     "mongodb": "^3.3.4",
@@ -51,7 +52,7 @@
     "react-bootstrap-table": "^4.1.0",
     "react-chartist": "^0.13.0",
     "react-dates": "^12.6.0",
-    "react-dev-utils": "^4.0.1",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.3.1",
     "react-google-maps": "^7.3.0",
     "react-map-gl": "^3.0.4",
@@ -73,7 +74,7 @@
     "sweetalert-react": "^0.4.10",
     "tapable": "^1.1.3",
     "url-loader": "0.5.9",
-    "webpack": "3.12.0",
+    "webpack": "^4.0.0",
     "webpack-dev-server": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
@@ -84,7 +85,7 @@
     "file-loader": "^4.2.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^6.0.6",
-    "webpack-manifest-plugin": "^1.2.1"
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src node scripts/start.js",
