--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.7.2",
+    "@types/googlemaps": "^3.38.0",
+    "@types/markerclustererplus": "^2.1.33",
     "acorn": "^7.1.0",
+    "ajv": "^6.10.2",
     "animate.css": "^3.5.2",
     "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "8.0.0-beta.1",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.0.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "1.1.3",
-    "chartist": "0.9.4",
+    "chartist": "^0.9.8",
     "classnames": "^2.2.5",
-    "css-loader": "0.28.4",
+    "css-loader": "^3.2.0",
+    "debug": "^4.1.1",
     "dotenv": "^4.0.0",
     "eslint": "6.6.0",
     "eslint-config-react-app": "5.0.2",
@@ -34,7 +37,7 @@
     "gh-pages": "^1.0.0",
     "hooks": "^0.3.2",
     "html-webpack-plugin": "4.0.0-beta.11",
-    "jest": "20.0.4",
+    "jest": "^25.0.0",
     "moment": "^2.18.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.11",
@@ -43,44 +46,45 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-    "react": "^16.3.1",
+    "react": "^16.12.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-beautiful-dnd": "12.1.1",
     "react-big-calendar": "^0.23.0",
-    "react-bootstrap": "^0.31.2",
+    "react-bootstrap": "^0.31.5",
     "react-bootstrap-sweetalert": "^4.0.0",
     "react-bootstrap-table": "^4.1.0",
     "react-chartist": "^0.13.0",
-    "react-dates": "^12.6.0",
+    "react-dates": "^21.5.0",
     "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.3.1",
-    "react-google-maps": "^7.3.0",
+    "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
     "react-map-gl": "^3.0.4",
     "react-native-rss-parser": "^1.4.0",
     "react-notification-system": "^0.2.15",
     "react-prop-types-element-of-type": "^2.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^3.7.2",
-    "redux-form": "^7.0.4",
+    "redux-form": "^8.2.6",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "rss-parser": "^3.7.3",
     "style-loader": "0.18.2",
     "stylish": "^1.0.0",
+    "stylus": "^0.54.7",
     "sw-precache-webpack-plugin": "0.11.5",
     "sweetalert": "1.0.0",
-    "sweetalert-react": "^0.4.10",
+    "sweetalert-react": "^0.4.11",
     "tapable": "^1.1.3",
-    "url-loader": "0.5.9",
-    "webpack": "^4.0.0",
-    "webpack-dev-server": "3.0.0",
-    "whatwg-fetch": "2.0.3"
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0",
+    "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "cross-env": "^5.2.0",
     "file-loader": "^4.2.0",
     "node-sass": "^4.13.0",
