--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.18.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.11",
+    "mongoose-long": "^0.2.1",
     "object-assign": "4.1.1",
     "pe7-icon": "^1.0.4",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -70,6 +71,7 @@
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "rss-parser": "^3.7.3",
+    "server": "^1.0.19",
     "style-loader": "0.18.2",
     "stylish": "^1.0.0",
     "stylus": "^0.54.7",
@@ -79,6 +81,7 @@
     "tapable": "^1.1.3",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "whatwg-fetch": "3.0.0"
   },
