--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^9.0.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -25,10 +26,12 @@
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
+    "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "debug": "^4.1.1",
     "dotenv": "^4.0.0",
     "eslint": "6.6.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-react-app": "5.0.2",
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "4.4.1",
@@ -42,6 +45,7 @@
     "fixed-data-table": "^0.6.4",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
+    "history": "latest",
     "hooks": "^0.3.2",
     "html-webpack-plugin": "4.0.0-beta.11",
     "jest": "^25.0.0",
@@ -49,6 +53,7 @@
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.11",
     "mongoose-long": "^0.2.1",
+    "nodemon": "^1.17.3",
     "object-assign": "4.1.1",
     "pe7-icon": "^1.0.4",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -92,9 +97,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "whatwg-fetch": "3.0.0",
-    "babel-polyfill": "^6.26.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "nodemon": "^1.17.3"
+    "http-proxy-middleware": "latest"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.8.0",
