--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^6.10.2",
     "animate.css": "^3.5.2",
     "autoprefixer": "7.1.2",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -48,6 +49,7 @@
     "history": "latest",
     "hooks": "^0.3.2",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http-proxy-middleware": "latest",
     "jest": "^25.0.0",
     "moment": "^2.18.1",
     "mongodb": "^3.3.4",
@@ -96,8 +98,7 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
-    "whatwg-fetch": "3.0.0",
-    "http-proxy-middleware": "latest"
+    "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.8.0",
